--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,8 @@
 PORT = 8000
 DB_HOST = localhost
 DB_USER = root
-DB_PASSWORD =IS56@Ne56
-DB_NAME = watch
+DB_PASSWORD =205011D
+DB_NAME = cpm_schema
 ADMIN_PW= admindataPass25
 ADMIN_EMAIL=admin@gmail.com
 SECRET=isdhendojoshifuyoshimarioluigipeachbowser
-USER_EMAIL = irescuebusiness@gmail.com
-USER_PASS = aqrstgojvlcatzsh
-API_KEY = 588192259535974
-API_SECRET = fToGbz0fq3FjN7bJknzZaIt2L7Q
-
-apiKey = AIzaSyD3OSYizUIydNk7kRSCrWpIQLftzEVexMc
-authDomain = imageupload-65859.firebaseapp.com
-projectId = imageupload-65859
-storageBucket=imageupload-65859.appspot.com
-messagingSenderId = 129471552164
-appId=1:129471552164:web:3922adeffbd87128d02431
-//IS56@Ne56
